2007-09-26 [mones]	3.0.1cvs34

	* manual/account.xml
	* manual/plugins.xml
		Fixed irc channel name, added some docbook markup.
		Changed text markup to docbook markup. 
		Added spamcop as supported in SpamReport description.
	* manual/fr/plugins.xml
		Fixed irc channel name.
	* manual/es/account.xml
	* manual/es/advanced.xml
	* manual/es/claws-mail-manual.xml
	* manual/es/glossary.xml
	* manual/es/gpl.xml
	* manual/es/keyboard.xml
	* manual/es/plugins.xml
		Synced with English version, fixed a couple of typos.

2007-09-26 [colin]	3.0.1cvs33

	* configure.ac
		Explain why "Libgnomeprint: no" on GTK+ 2.10

2007-09-26 [colin]	3.0.1cvs32

	* src/messageview.c
	* src/procmsg.c
	* src/procmsg.h
		Optimisation: avoid fetching mail 3 times locally
		for displaying

2007-09-26 [colin]	3.0.1cvs31

	* src/mh.c
		Fix missing static

2007-09-26 [colin]	3.0.1cvs30

	* src/folder.c
	* src/folder.h
	* src/mh.c
	* src/mh.h
		Fix MH mtime hack - make it a folder class function

2007-09-26 [colin]	3.0.1cvs29

	* src/inc.c
		Fix bug 1334, 'user defined mail incorporation 
		script not run'

2007-09-25 [colin]	3.0.1cvs28

	* src/codeconv.c
		Optimisation: shortcut conv_codeset_strdup
		when src_code and dest_code are the same
	* src/common/xml.c
	* src/common/xml.h
		Optimisation: shortcut code conversions when
		files are in UTF-8; faster list walking by
		using prepend/reverse.

2007-09-25 [holger]	3.0.1cvs27

	* src/printing.c
		Replace button bar of the preview window
		with a real toolbar (patch by Colin)
		Add zooming to the preview window

2007-09-24 [paul]	3.0.1cvs26

	* src/compose.c
		compact the character set menu, adding some
		missing encodings. Patch by Pawel Pekala

2007-09-23 [paul]	3.0.1cvs25

	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_quote.c
	* src/quote_fmt.c
	* src/quote_fmt.h
		remove unnecessary frame from Templates options
		and improve the English of the check button label

2007-09-22 [colin]	3.0.1cvs24

	* src/gtk/quicksearch.c