@@ -2898,3 +2898,4 @@
 ( cvs diff -u -r 1.94.2.152 -r 1.94.2.153 src/messageview.c;  cvs diff -u -r 1.150.2.102 -r 1.150.2.103 src/procmsg.c;  cvs diff -u -r 1.60.2.48 -r 1.60.2.49 src/procmsg.h;  ) > 3.0.1cvs32.patchset
 ( cvs diff -u -r 1.654.2.2952 -r 1.654.2.2953 configure.ac;  ) > 3.0.1cvs33.patchset
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 manual/account.xml;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 manual/plugins.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/account.xml;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 manual/es/advanced.xml;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 manual/es/claws-mail-manual.xml;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 manual/es/glossary.xml;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 manual/es/gpl.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/keyboard.xml;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 manual/es/plugins.xml;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 manual/fr/plugins.xml;  ) > 3.0.1cvs34.patchset
+( cvs diff -u -r 1.1.2.77 -r 1.1.2.78 src/gtk/quicksearch.c;  ) > 3.0.1cvs35.patchset
