@@ -1,3 +1,8 @@
+2007-09-27 [colin]	3.0.1cvs35
+
+	* src/gtk/quicksearch.c
+		Fix bug 1336, 'Segfault if empty space before search-string'
+
 2007-09-26 [mones]	3.0.1cvs34
 
 	* manual/account.xml
